insights/3.10/widgets/single-value.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/insights/3.10/widgets/single-value)[Next](https://docs.tigergraph.com/insights/3.10/widgets/single-value)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/insights/3.10/widgets/single-value)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/insights/3.10/widgets/single-value)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [Insights](https://docs.tigergraph.com/insights/3.10/intro/)
  *     * [Overview](https://docs.tigergraph.com/insights/3.10/intro/)
    * [Get Started](https://docs.tigergraph.com/insights/3.10/intro/get-started)
    * [Applications](https://docs.tigergraph.com/insights/3.10/intro/applications)
  *     * [Widgets](https://docs.tigergraph.com/insights/3.10/widgets/)
      * [Graph](https://docs.tigergraph.com/insights/3.10/widgets/graph-widget)
      * [Map](https://docs.tigergraph.com/insights/3.10/widgets/map-widget)
      * [Table](https://docs.tigergraph.com/insights/3.10/widgets/table-widget)
      * [Value](https://docs.tigergraph.com/insights/3.10/widgets/single-value)
      * [Markdown](https://docs.tigergraph.com/insights/3.10/widgets/markdown-widget)
      * [Line Chart](https://docs.tigergraph.com/insights/3.10/widgets/line-chart)
      * [Bar Chart](https://docs.tigergraph.com/insights/3.10/widgets/bar-chart)
      * [Pie Chart](https://docs.tigergraph.com/insights/3.10/widgets/pie-chart)
      * [Sankey](https://docs.tigergraph.com/insights/3.10/widgets/sankey)
      * [Scatter Chart](https://docs.tigergraph.com/insights/3.10/widgets/scatter-plot-widget)
      * [Inputs](https://docs.tigergraph.com/insights/3.10/widgets/inputs)
    * [Actions](https://docs.tigergraph.com/insights/3.10/widgets/actions)
    * [Conditional Styling](https://docs.tigergraph.com/insights/3.10/widgets/conditional-styling)
  *     * [Insights Release Notes](https://docs.tigergraph.com/insights/3.10/release-notes/)
    * [Legacy Version Documentation](https://docs.tigergraph.com/insights/3.10/release-notes/legacy-tg-versions)


Insights 3.10
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [Insights 3.10](https://docs.tigergraph.com/insights/3.10/intro/)
  * [Widgets](https://docs.tigergraph.com/insights/3.10/widgets/)
  * [Value](https://docs.tigergraph.com/insights/3.10/widgets/single-value)


[Edit this Page](https://github.com/tigergraph/insights-docs/edit/3.10/modules/widgets/pages/single-value.adoc)
### Contents
  * [Inputs](https://docs.tigergraph.com/insights/3.10/widgets/single-value#_inputs)
  * [Widget window](https://docs.tigergraph.com/insights/3.10/widgets/single-value#_widget_window)
  * [Writing GSQL Statements](https://docs.tigergraph.com/insights/3.10/widgets/single-value#_writing_gsql_statements)
  * [Use Pattern Search](https://docs.tigergraph.com/insights/3.10/widgets/single-value#_use_pattern_search)
  * [Use GSQL Language Search](https://docs.tigergraph.com/insights/3.10/widgets/single-value#_use_gsql_language_search)


# Value Widget
### Contents
  * [Inputs](https://docs.tigergraph.com/insights/3.10/widgets/single-value#_inputs)
  * [Widget window](https://docs.tigergraph.com/insights/3.10/widgets/single-value#_widget_window)
  * [Writing GSQL Statements](https://docs.tigergraph.com/insights/3.10/widgets/single-value#_writing_gsql_statements)
  * [Use Pattern Search](https://docs.tigergraph.com/insights/3.10/widgets/single-value#_use_pattern_search)
  * [Use GSQL Language Search](https://docs.tigergraph.com/insights/3.10/widgets/single-value#_use_gsql_language_search)


The Value Widget displays values from your graph database.
## [](https://docs.tigergraph.com/insights/3.10/widgets/single-value#_inputs)Inputs
Accepts data as vertices and edges.
## [](https://docs.tigergraph.com/insights/3.10/widgets/single-value#_widget_window)Widget window
Click **Value** Widget.
![Screen Shot 2024 03 05 at 10.57.02 AM](https://docs.tigergraph.com/insights/3.10/widgets/_images/Screen%20Shot%202024-03-05%20at%2010.57.02%20AM.png)
![Screen Shot 2024 03 05 at 10.57.31 AM](https://docs.tigergraph.com/insights/3.10/widgets/_images/Screen%20Shot%202024-03-05%20at%2010.57.31%20AM.png)
In the Display section on the right side of the window, there are detailed settings for adjusting the icon and text size, type, and color.
## [](https://docs.tigergraph.com/insights/3.10/widgets/single-value#_writing_gsql_statements)Writing GSQL Statements
Insights supports human language like pattern search, as well as the powerful GSQL query language for more advanced users.
![Screen Shot 2024 03 05 at 10.58.11 AM](https://docs.tigergraph.com/insights/3.10/widgets/_images/Screen%20Shot%202024-03-05%20at%2010.58.11%20AM.png)
### [](https://docs.tigergraph.com/insights/3.10/widgets/single-value#_use_pattern_search)Use Pattern Search
![Screen Shot 2024 03 05 at 10.58.38 AM](https://docs.tigergraph.com/insights/3.10/widgets/_images/Screen%20Shot%202024-03-05%20at%2010.58.38%20AM.png)
Figure 1. Pattern Search Example 1
![Screen Shot 2024 03 05 at 10.58.55 AM](https://docs.tigergraph.com/insights/3.10/widgets/_images/Screen%20Shot%202024-03-05%20at%2010.58.55%20AM.png)
Figure 2. Pattern Search Example 2
![Screen Shot 2024 03 05 at 10.59.11 AM](https://docs.tigergraph.com/insights/3.10/widgets/_images/Screen%20Shot%202024-03-05%20at%2010.59.11%20AM.png)
Figure 3. Pattern Search Example 3
![Screen Shot 2024 03 05 at 10.59.27 AM](https://docs.tigergraph.com/insights/3.10/widgets/_images/Screen%20Shot%202024-03-05%20at%2010.59.27%20AM.png)
Figure 4. Pattern Search Example 4
### [](https://docs.tigergraph.com/insights/3.10/widgets/single-value#_use_gsql_language_search)Use GSQL Language Search
![Screen Shot 2024 03 05 at 10.59.54 AM](https://docs.tigergraph.com/insights/3.10/widgets/_images/Screen%20Shot%202024-03-05%20at%2010.59.54%20AM.png)
If there are multiple `PRINT` statements, users can map multiple print values：
```
INTERPRET QUERY() FOR GRAPH MyGraph {
  PRINT "demo1";
  PRINT "demo2";
  PRINT "demo3";
}
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

![Screen Shot 2024 03 05 at 11.00.32 AM](https://docs.tigergraph.com/insights/3.10/widgets/_images/Screen%20Shot%202024-03-05%20at%2011.00.32%20AM.png)
Figure 5. Multiple `PRINT` Statement Example
If the multiple values are printed using `PRINT` and they include vertices or edges, only the value of the first attribute of the vertex or edge can be mapped.
```
INTERPRET QUERY() FOR GRAPH MyGraph {
  start = {City.*};
  start = SELECT c FROM City:c;
  PRINT start;
  PRINT "demo1";
}
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

![Screen Shot 2024 03 05 at 11.00.56 AM](https://docs.tigergraph.com/insights/3.10/widgets/_images/Screen%20Shot%202024-03-05%20at%2011.00.56%20AM.png)
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


